# motor-controller-hardware-client-qt-app

Documents/S4V_Motor_Controller_Test/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  style.qss
Documents/S4V_Motor_Controller_Test/Hardware/: serialcontroller.cpp  serialcontroller.h
Documents/S4V_Motor_Controller_Test/Resources/: resources.qrc  style.qss
Documents/S4V_Motor_Controller_Test/UI/: mainwindow.cpp  mainwindow.h  mainwindow.ui
